<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.16</version>
        <relativePath/>
    </parent>

    <groupId>com.crewsafe</groupId>
    <artifactId>crewsafe-backend</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>crewsafe-backend</name>
    <description>CrewSafe SG - shared backend</description>

    <!-- SCRUM-295: dependency-risk backlog burn-down. The 3.5.13 to 3.5.16
         parent bump moves the BOM-managed Tomcat/Netty/Jackson/Spring
         Security/Spring Data/postgresql cluster as a baseline. The
         properties below override individual artifacts the BOM still pins
         to a version SonarCloud re-flagged after the first round of this
         bump landed (confirmed 2026-08-18 by re-running
         search_dependency_risks post-merge and finding new CVEs against
         several already-bumped artifacts): each target is the latest
         stable (non-alpha/beta/new-major-line) release on Maven Central as
         of that date. log4j2/commons-lang3/httpclient5/httpcore5 were
         already overridden in the first round (the BOM never moves them at
         all); netty/tomcat/jackson-bom/logback/postgresql are a SECOND
         round of overrides layered on top of what 3.5.16 itself provides,
         because newer patches shipped upstream after 3.5.16's own pin. -->
    <properties>
        <java.version>21</java.version>
        <lombok.version>1.18.38</lombok.version>
        <log4j2.version>2.26.1</log4j2.version>
        <commons-lang3.version>3.20.0</commons-lang3.version>
        <httpclient5.version>5.6.4</httpclient5.version>
        <httpcore5.version>5.4.3</httpcore5.version>
        <netty.version>4.1.137.Final</netty.version>
        <tomcat.version>10.1.57</tomcat.version>
        <jackson-bom.version>2.22.2</jackson-bom.version>
        <logback.version>1.5.38</logback.version>
        <postgresql.version>42.7.13</postgresql.version>
    </properties>

    <dependencies>

        <!-- Web MVC -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <!-- Health checks and metrics (NFR: observability) -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>

        <!-- Bean Validation -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <!-- Persistence -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>

        <!-- Schema migrations. flyway-database-postgresql is required from Flyway 10 -->
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-database-postgresql</artifactId>
        </dependency>

        <!-- Supersedes the earlier standalone spring-security-crypto dependency, which
             this starter already includes. -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>

        <!-- Validates Cognito-issued access tokens against its JWKS. The backend never
             issues a token itself, so this is the only auth-related starter it needs. -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
        </dependency>

        <!-- OpenAPI 3 contract, consumed by the web and mobile client generators -->
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>2.8.6</version>
        </dependency>

        <!-- Cognito API client. Runtime use: com.crewsafe.admin.cognito provisions a new
             user's Cognito identity directly (AdminCreateUser). Also used by
             AbstractIntegrationTest against the pinned Testcontainers emulator. -->
        <dependency>
            <groupId>software.amazon.awssdk</groupId>
            <artifactId>cognitoidentityprovider</artifactId>
            <version>2.46.17</version>
        </dependency>

        <!-- Amazon Bedrock SDK for AI-driven mitigation generation -->
        <dependency>
            <groupId>software.amazon.awssdk</groupId>
            <artifactId>bedrockruntime</artifactId>
            <version>2.46.17</version>
        </dependency>

        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>

        <!-- Test -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- Integration tests run against real PostgreSQL, not H2, so that Flyway
             migrations and Postgres-specific SQL are genuinely exercised -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-testcontainers</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>postgresql</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <!-- SCRUM-295: commons-compress has no corresponding Boot BOM property
         (it's pulled in transitively, test-scope, via testcontainers) so it
         needs an explicit override rather than a property bump. -->
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-compress</artifactId>
                <version>1.28.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <!--
                        Mockito's inline mock maker requires instrumentation. Loading its
                        agent explicitly keeps tests working on JDKs that block dynamic
                        self-attachment and avoids relying on a deprecated JVM behaviour.

                        @{argLine} carries the JaCoCo agent that jacoco-maven-plugin's
                        prepare-agent execution injects below. Without it here, this
                        hardcoded argLine would silently replace JaCoCo's, and coverage
                        would stay at 0% despite the plugin being configured.
                    -->
                    <argLine>@{argLine} -javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar</argLine>
                    <environmentVariables>
                        <!--
                            Testcontainers' Ryuk reaper bind-mounts the container socket, which
                            Podman's rootless machine cannot do ("operation not supported" on
                            mkdir of the .sock path). Disabling it keeps `./mvnw test` working
                            on Podman and Docker alike.

                            Trade-off: without the reaper, containers are cleaned up by the JVM
                            shutdown hook instead. That covers normal and failed runs; a test
                            run killed with SIGKILL can leave a postgres:16 container behind,
                            removable with `podman rm -f` on the stale container id.
                        -->
                        <TESTCONTAINERS_RYUK_DISABLED>true</TESTCONTAINERS_RYUK_DISABLED>
                    </environmentVariables>
                </configuration>
            </plugin>
            <plugin>
                <!--
                    Feeds the SonarCloud Quality Gate's "Coverage on New Code" condition
                    (see sonar-project.properties). prepare-agent instruments the tests
                    surefire runs; report, bound to the same test phase, turns that into
                    the XML file Sonar reads.
                -->
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
